[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scripts/FallingPlat.gd" type="Script" id=1]
[ext_resource path="res://Assets/Sprites/Floor/FallingPlat.png" type="Texture" id=2]

[sub_resource type="Animation" id=2]
resource_name = "Shake"
length = 0.2
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 1, 0 ), Vector2( 5.96046e-08, 0 ), Vector2( -1, 0 ), Vector2( 0, 0 ) ]
}

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 32, 5.5 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 32, 0.5 )

[node name="FallingPlatform" type="KinematicBody2D"]
collision_layer = 4
collision_mask = 0
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Shake = SubResource( 2 )

[node name="ShakeTimer" type="Timer" parent="."]
one_shot = true

[node name="RespawnTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -3.5 )
shape = SubResource( 3 )

[node name="TopChecker" type="Area2D" parent="."]
collision_layer = 0
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="TopChecker"]
position = Vector2( 0, -9.5 )
shape = SubResource( 4 )
one_way_collision = true

[connection signal="timeout" from="ShakeTimer" to="." method="_on_ShakeTimer_timeout"]
[connection signal="timeout" from="RespawnTimer" to="." method="_on_RespawnTimer_timeout"]
[connection signal="body_entered" from="TopChecker" to="." method="_on_TopChecker_body_entered"]
